# escuadra

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  data.md  docs.md  feature.md  security.md  test.md
.github/workflows/: ci.yml  deploy.yml  security.yml
docs/: api.md  arquitectura.md  despliegue.md  ejemplos.md  estandares-codigo.md  flujo-de-trabajo.md  glosario.md  herramientas.md  preguntas-frecuentes.md  referencias.md  requerimientos.md
documentos/: arquitectura.md
security/: SECURITY.md
src/escuadra/: cli.py
src/escuadra/core/: registry.py
src/escuadra/modulos/: README.md  __init__.py
src/escuadra/modulos/electrica/: __init__.py
src/escuadra/modulos/matematicas/: __init__.py
src/escuadra/modulos/sistemas/: __init__.py
src/escuadra/ui/: dialogo_acerca_de.py  progress.py
tests/casos/funcionales/: casos-prueba-funcionales.md
tests/plan/: criterios-de-salida.md  estrategia.md  plan-de-pruebas.md
tests/reportes/: plantilla-reporte.md
