[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "escuadra"
version = "0.1.0"
description = "Herramientas de cálculo de ingeniería civil y eléctrica"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["ruff", "taskipy"]

[project.scripts]
escuadra = "escuadra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.taskipy.tasks]
lint = "ruff check ."